golden/error/parse_seq_invalid_terminator_semicolon.test
{x = 10, y = 32}

# output:
 --> stdin:1:7
  |
1 | {x = 10, y = 32}
  |        ^
Error: Expected ';' instead of ',' here.
